set up different models

--- a/sgd_from_scratch.ipynb
+++ b/sgd_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 0. Constructing Basic Functions from scratch"
+    "### 0. Constructing Basic Functions for Gradient Descent from scratch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,11 +34,19 @@
     "    for param in params:\n",
     "        param[:] = param - lr * param.grad\n",
     "\n",
-    "def lin_loss(y, y_hat):\n",
+    "def l1_loss(y, y_hat):\n",
+    "    return sum(nd.abs(y_hat - y.reshape(y_hat.shape)))\n",
+    "        \n",
+    "def l2_loss(y, y_hat):\n",
     "    return (y_hat - y.reshape(y_hat.shape)) ** 2\n",
     "        \n",
     "def log_loss(y, y_hat):\n",
-    "    return (nd.log(y.reshape(y_prime.shape)) - nd.log(y_prime)) ** 2"
+    "    return (nd.log(y.reshape(y_prime.shape)) - nd.log(y_prime)) ** 2\n",
+    "\n",
+    "def initialize_parameters(param, dimension):\n",
+    "    param = nd.ones(dim)\n",
+    "    param.attach_grad     \n",
+    "        "
    ]
   },
   {
@@ -47,7 +55,7 @@
    "source": [
     "### 1. Plank's law with random noise\n",
     "\n",
-    "$$B_v(v, T) = \\frac{2 h c^2}{\\lambda^5} \\frac 1 {e^{\\frac{h c}{\\lambda k_B T}} -1}$$"
+    "$$B_\\lambda(\\lambda, T) = \\frac{2 h c^2}{\\lambda^5} \\frac 1 {e^{\\frac{h c}{\\lambda k_B T}} -1}$$"
    ]
   },
   {
@@ -59,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -130,20 +138,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We try to estimate this random noise with four following models\n",
+    "#### We try to estimate this random noise with four following models. \n",
     "\n",
-    "- Linear\n",
-    "- Quadratic\n",
-    "- Wien's Approximation\n",
-    "- Plank's Law (original function)"
+    "- **Linear*** \n",
+    "- **Quadratic***\n",
+    "- **Wien's Approximation**\n",
+    "- **Plank's Law** (original function)\n",
+    "\n",
+    "*: assuming we do not know the real model"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### 2.1 Linear Model\n",
+    "$$B_\\lambda(\\lambda, T) = a T + b$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2 Qudratic Model\n",
+    "$$B_\\lambda(\\lambda, T) = a T^2 + b T + c$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.3 Wien's Approximation\n",
+    "$$B_\\lambda(\\lambda, T) = \\frac{2 h c^2}{\\lambda^5}{e^{-\\frac{h c}{\\lambda k_B T}}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.4 Plank's Law\n",
+    "$$B_\\lambda(\\lambda, T) = \\frac{2 h c^2}{\\lambda^5} \\frac 1 {e^{\\frac{h c}{\\lambda k_B T}} -1}$$"
+   ]
   },
   {
    "cell_type": "markdown",
